# server/api/Service/Interfaces/IAuthorService.cs
@@ -4,10 +4,10 @@ namespace api.Servises.Interfaces;
 
 public interface IAuthorService
 {
-    Task<List<AuthorResponseDto>> GetAuthors();
-    Task<AuthorResponseDto> CreateAuthor(AuthorResponseDto authorResponseDto);
+    Task<List<AuthorDto>> GetAuthors();
+    Task<AuthorDto> CreateAuthor(AuthorDto authorDto);
         
-    Task<AuthorResponseDto> GetAuthorById(string id);
-    Task<AuthorResponseDto> UpdateAuthor(string id, AuthorResponseDto authorResponseDto);
+    Task<AuthorDto> GetAuthorById(string id);
+    Task<AuthorDto> UpdateAuthor(string id, AuthorDto authorDto);
     Task DeleteAuthor(string id);
 }
